assets/scss/main.scss
@import "tufte";


html {
    font-size: 16px;
}

header {
    padding-top: 4rem;;
}

article {
    padding: 0;
}

hr {
    border-color: inherit;
    background-color: inherit;
}

h1 {
    margin-top: 0;
    font-size: 2.3rem;
}

section > *:first-child {
    margin-top: 0;
}

h1.site-title {
    margin-top: 2rem;
    font-size: 3rem;
    font-weight: 500;
}

h1.site-title a,
h1.site-title a:link,
h1.site-title a:visited,
h1.site-title a:active {
  text-decoration: none;
}

h1.site-title a:hover {
  text-decoration: underline;
}

nav.main-navigation {
    text-transform: uppercase;
    font-size: 1.3rem;

    ul {
        list-style: none;
        padding: 0;
        margin: 0;
        display: flex;

        li {
            &:first-child {
                margin-left: 0; // Ensure the first menu item is flush left
            }
            margin: 0 1rem; // Space between menu items, adjust as needed

            a {
                text-decoration: none;
                color: inherit; // Inherit color
                padding-bottom: 0.2rem; // For border-bottom effect on hover

                &:hover,
                &.active {
                    text-decoration: underline; // Remove underline if you prefer border
                }
            }
        }
    }
}

.social-icon-item {
  margin-bottom: 0.75rem;

  .social-icon-svg {
    height: 1.3rem;
    // width: 36px;  // Increased by 50% from 24px (24 * 1.5 = 36)
    // height: 36px; // Increased by 50% from 24px
    margin-right: 0.3em;
    vertical-align: text-bottom;
  }
}


div.sidenote,
div.marginnote {
    float: right;
    clear: right;
    margin-right: 12%;
    width: 27.25%;
    margin-top: 0.3rem;
    margin-bottom: 0;
    font-size: 0.8rem;
    line-height: 1.3;
    vertical-align: baseline;
    position: relative;
}


.list-item-date {
    margin-bottom: 3rem;
    margin-top: 0rem;
}

